# DocStringAgent

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: __main__.py  agents.py  config.py  models.py  server.py  tools.py
src/: __init__.py  __main__.py  agents.py  models.py  server.py
static/: app.js  index.html  styles.css
